랜덤스피드오브젝트(기본오브젝트상속) 구현

--- a/BAAAM/BAAAM/BAAAM.vcxproj.filters
+++ b/BAAAM/BAAAM/BAAAM.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="Object.cpp">
       <Filter>Class\Object</Filter>
     </ClCompile>
+    <ClCompile Include="RandomSpeedObj.cpp">
+      <Filter>Class\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -28,6 +31,9 @@
       <Filter>Class\Singleton</Filter>
     </ClInclude>
     <ClInclude Include="Object.h">
+      <Filter>Class\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomSpeedObj.h">
       <Filter>Class\Object</Filter>
     </ClInclude>
   </ItemGroup>
