키입력처리 구현 & 조작가능한 객체 생성

--- a/BAAAM/BAAAM/BAAAM.vcxproj.filters
+++ b/BAAAM/BAAAM/BAAAM.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="RandomSpeedObj.cpp">
       <Filter>Class\Object</Filter>
     </ClCompile>
+    <ClCompile Include="SnakeBody.cpp">
+      <Filter>Class\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -34,6 +37,9 @@
       <Filter>Class\Object</Filter>
     </ClInclude>
     <ClInclude Include="RandomSpeedObj.h">
+      <Filter>Class\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="SnakeBody.h">
       <Filter>Class\Object</Filter>
     </ClInclude>
   </ItemGroup>
