--- a/BAAAM/BAAAM/BAAAM.vcxproj
+++ b/BAAAM/BAAAM/BAAAM.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RandomSpeedObj.h" />
+    <ClInclude Include="SnakeBody.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Console.cpp" />
@@ -170,6 +171,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RandomSpeedObj.cpp" />
+    <ClCompile Include="SnakeBody.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
