4주차 교육 내용 구현

--- a/BAAAM/BAAAM/BAAAM.vcxproj
+++ b/BAAAM/BAAAM/BAAAM.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Apple.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Object.h" />
@@ -160,6 +161,7 @@
     <ClInclude Include="SnakeBody.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Apple.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
