--- a/BAAAM/BAAAM/BAAAM.vcxproj
+++ b/BAAAM/BAAAM/BAAAM.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Apple.h" />
     <ClInclude Include="Color.hpp" />
     <ClInclude Include="Console.h" />
+    <ClInclude Include="DeathZone.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="pch.h" />
@@ -165,6 +166,7 @@
   <ItemGroup>
     <ClCompile Include="Apple.cpp" />
     <ClCompile Include="Console.cpp" />
+    <ClCompile Include="DeathZone.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
