--- a/BAAAM/BAAAM/BAAAM.vcxproj.filters
+++ b/BAAAM/BAAAM/BAAAM.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Class\Util</Filter>
     </ClCompile>
+    <ClCompile Include="DeathZone.cpp">
+      <Filter>Class\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -56,6 +59,9 @@
     </ClInclude>
     <ClInclude Include="Color.hpp">
       <Filter>Class\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="DeathZone.h">
+      <Filter>Class\Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
